# expatmm

./: ChangeLog  Makefile.am  README-expatmm  README.md  autogen.sh  configure.ac  expatmm.pc.in
include/: ExpatXMLFileParser.h  ExpatXMLParser.h  expatmm-libdef.h  expatmm.h.in
src/: ExpatMM-version.cpp  ExpatXMLFileParser.cpp  ExpatXMLParser.cpp  Makefile.am
